# BMSTU-lab_after_boost

./: .travis.yml  CMakeLists.txt  README.md
examples/: main.cpp
include/: print_hello_world.h
sourses/: print_hello_world.cpp
